objects/BenchmarkPerformanceApproval__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AsOfDate__c</fullName>
        <label>As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benchmark__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benchmark</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Benchmark Performance Approvals</relationshipLabel>
        <relationshipName>Benchmark_Performance_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FileType__c</fullName>
        <label>File Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InceptionDate__c</fullName>
        <label>Inception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MTD__c</fullName>
        <label>MTD</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QTD__c</fullName>
        <label>QTD</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ReturnSinceInceptionAnnualized__c</fullName>
        <label>Return Since Inception Annualized</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ReturnSinceInceptionCumulative__c</fullName>
        <label>Return Since Inception Cumulative</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SinceInception__c</fullName>
        <label>Since Inception</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SourceFile__c</fullName>
        <label>Source File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IPM Manual Benchmark Performance File</fullName>
                </value>
                <value>
                    <fullName>FactSet Benchmark Daily Performance File</fullName>
                    <label>FactSet Daily Benchmark Performance File</label>
                </value>
                <value>
                    <fullName>FactSet Monthly Benchmark Performance File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tickers__c</fullName>
        <label>Tickers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalGross__c</fullName>
        <label>Total Gross</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalNet__c</fullName>
        <label>Total Net</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X10Year__c</fullName>
        <label>10 Year</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X1DayGross__c</fullName>
        <label>1 Day Gross</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X1DayNet__c</fullName>
        <label>1 Day Net</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X1DayPriceChange__c</fullName>
        <label>1 Day Price Change</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1Month__c</fullName>
        <label>1 Month</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X1Year__c</fullName>
        <label>1 Year</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3Month__c</fullName>
        <label>3 Month</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3Year__c</fullName>
        <label>3 Year</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD__c</fullName>
        <label>YTD</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <description>Stores the performance for benchmark until approved</description>
    <label>Benchmark Performance Approval</label>
    <nameField>
        <displayFormat>BPA-{0000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benchmark Performance Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>